--- a/p5sim/index.html
+++ b/p5sim/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Sketch</title>
-
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="libraries/p5.min.js"></script>
@@ -18,7 +17,7 @@
   </head>
 
   <body>
-    <script src="tree/sketch.js"></script>
+    <script src="procedural_animation/sketch.js"></script>
     <button>start recording</button><br>
   </body>
 </html>
